Add database config and fix MySQL connection for Railway